# chess-game-project

./: .gitignore  CMakeLists.txt  Config.hpp  Makefile  README.md
UMLs/: UML.drawio  UML`s.drawio
src/: Audio.cpp  Audio.hpp  Board.cpp  Board.hpp  Chess.cpp  Chess.hpp  Draw.cpp  Draw.hpp  Game.cpp  Game.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Pvp.cpp  Pvp.hpp  Stockfish.cpp  Stockfish.hpp  StockfishInput.cpp  StockfishInput.hpp  StockfishInput_unix.cpp  StockfishInput_win.cpp  UserInput.cpp  UserInput.hpp  main.cpp
